--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
 		}
 	],
 	"require-dev": {
-		"jakub-onderka/php-parallel-lint": "0.9",
-		"mediawiki/mediawiki-codesniffer": "0.3.0",
+		"jakub-onderka/php-parallel-lint": "0.9.*",
+		"mediawiki/mediawiki-codesniffer": "0.4.0",
 		"phpunit/phpunit": "4.6.*"
 	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
 			"phpunit $PHPUNIT_ARGS",
-			"phpcs -p"
+			"phpcs -p -s"
 		]
 	}
 }
