--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		}
 	],
 	"require-dev": {
-		"jakub-onderka/php-parallel-lint": "0.9.*",
+		"jakub-onderka/php-parallel-lint": "0.9",
 		"mediawiki/mediawiki-codesniffer": "0.4.0",
 		"phpunit/phpunit": "4.6.*"
 	},
