--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,11 @@
 	],
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9.2",
-		"mediawiki/mediawiki-codesniffer": "0.5.1",
-		"phpunit/phpunit": "4.6.*"
+		"mediawiki/mediawiki-codesniffer": "0.5.1"
 	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
-			"phpunit $PHPUNIT_ARGS",
 			"phpcs -p -s"
 		]
 	}
