--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 		"mediawiki/mediawiki-codesniffer": "0.5.1"
 	},
 	"scripts": {
+		"fix": "phpcbf",
 		"test": [
 			"parallel-lint . --exclude vendor",
 			"phpcs -p -s"
