--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "mediawiki/import-articles",
 	"type": "mediawiki-extension",
-	"license": "GPL-3.0",
+	"license": "GPL-3.0-only",
 	"homepage": "https://mediawiki.org/wiki/Extension:ImportArticles",
 	"description": "Allow the usage of ImportArticles JavaScript to import multiple pages at once",
 	"authors": [
