--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "import-articles",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-only",
   "homepage": "https://mediawiki.org/wiki/Extension:ImportArticles",
   "authors": [
     {
