build: Set private: true in package.json
The package.json is only for build, not to publish the package
Remove license, name, version, homepage and authors, because that is not
needed on private packages

Change-Id: I6aea06a36503d07628e3de7db4ff0c00584d8de5

--- a/package.json
+++ b/package.json
@@ -1,14 +1,5 @@
 {
-	"name": "import-articles",
-	"license": "GPL-3.0-only",
-	"homepage": "https://mediawiki.org/wiki/Extension:ImportArticles",
-	"authors": [
-		{
-			"name": "Kris Blair (Cblair91)",
-			"email": "admin@betadev.co.uk"
-		}
-	],
-	"version": "1.0.3",
+	"private": true,
 	"scripts": {
 		"test": "grunt test",
 		"doc": "jsduck"
