--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
 		"doc": "jsduck"
 	},
 	"devDependencies": {
+		"eslint-config-wikimedia": "0.15.0",
 		"grunt": "1.0.4",
 		"grunt-banana-checker": "0.8.1",
-		"grunt-contrib-jshint": "0.11.2",
-		"grunt-jscs": "2.1.0",
-		"grunt-jsonlint": "1.1.0"
-	}
+		"grunt-eslint": "22.0.0"
+	},
+	"eslintIgnore": [
+		"vendor/**"
+	]
 }
