build: Updating dependencies
composer:
* mediawiki/mediawiki-codesniffer: 45.0.0 → 47.0.0

npm:
* eslint-config-wikimedia: 0.28.2 → 0.30.0
  The following rules are failing and were disabled:
  * prefer-const

Additional changes:
* eslint: Replaced `wikimedia/client-es5` with `wikimedia/client`.

Change-Id: I3767257caacb592573568c331c1fb5a82d9c4754

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
+		"wikimedia/client",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
@@ -9,6 +9,7 @@
 		"no-implicit-globals": "off",
 		"computed-property-spacing": "off",
 		"no-unused-vars": "warn",
-		"no-jquery/no-is-array": "warn"
+		"no-jquery/no-is-array": "warn",
+		"prefer-const": "warn"
 	}
 }
